gobmkida/g1/print_eye
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/print_eye/src/engine/optics.c:1288:11: error: use of undeclared identifier 'pdfa'
gprintf( &pdfa.name[70], v7, v6); 
          ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/print_eye/src/obj/1/optics.o] Error 1
